Corrected boxes on index to hold the text instead of text spilling out.

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body
 	z-index: 1;
 	height: 100%;
 	width: 100%;
-	min-height: 100vh;
+	min-height: 125vh;
 
 }
 
@@ -60,6 +60,7 @@ footer {
 }
 
 .headingColor {
+	overflow:hidden;
 	color: black;
 	display: inline-block;
 	background-color: white;
